[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0"]

[project]
name = "pyaskalono"
version = "0.1.3"
description = "Python bindings for askalono - rust library to detect license texts"
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/kumekay/pyaskalono"

[project.optional-dependencies]
dev = ["maturin>=1.0", "pytest>=7.0"]
