[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0"]

[project]
name = "pyaskalono"
version = "0.2.0"
description = "Python bindings for askalono - rust library to detect license texts"
requires-python = ">=3.11"

[project.urls]
homepage = "https://github.com/kumekay/pyaskalono"

[project.optional-dependencies]
dev = ["maturin>=1.0", "pytest>=7.0"]
